2011-05-24

	* tested on a clean Debian
	* serious bug discovered

