@@ -6,6 +6,7 @@ aw = Watcher.new
 
 aw.power_on_self_test
 
-aw.init_snort("/var/log/snort/alert")
+#aw.init_snort("/var/log/snort/alert")
+aw.init_snort("/home/xtephan/alert")
 
-#aw.run
+aw.run
