@@ -2,5 +2,6 @@ require 'test/unit'
 
 #Test files
 require 'unittest/testSanity'  #sanity checking
-require 'unittest/testWatcher.rb' #tests the Logs class
+require 'unittest/testWatcher.rb' #tests the Watcher class
+require 'unittest/testLog.rb' #tests the Snort class
 require 'unittest/testSnort.rb' #tests the Snort class
